# medow

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs  pagination.rs  search_logic.rs  search_view.rs  utils.rs
