[package]
name = "medow"
version = "0.1.0"
authors = ["Stefan Rabmund <stefan.rabmund@mailbox.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
dioxus = { version = "0.7.1", features = [] }
mediathekviewweb = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
